# Physical_Agent

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: xiaozhi-driver-tutorial.zh-CN.md
examples/moce_arm/: README.md  README.zh-CN.md  driver.py  integration-report.md  physical-agent.partial-hardware.yaml  physical-agent.yaml  physical_driver.yaml
examples/moce_arm/workspace-partial-hardware/: ACTIONS.md  CAPABILITIES.md  CHAT.md  FEEDBACK.md  LOG.md  MEMORY.md  PLAN.md  SAFETY.md  TASK.md  WORLD.md
examples/moce_arm/workspace-partial-wrist-gripper/: ACTIONS.md  CAPABILITIES.md  CHAT.md  FEEDBACK.md  LOG.md  MEMORY.md  PLAN.md  TASK.md  WORLD.md
physical_agent/: cli.py  env.py
physical_agent/agent/: __init__.py  chat_runtime.py  code_memory.py  code_patch.py  code_router.py  code_runtime.py  driver_coder.py  llm_planner.py  onboarding.py  runtime.py  skills.py
physical_agent/drivers/: templates.py
physical_agent/gui/: server.py
physical_agent/llm/: __init__.py  openai_compatible.py
physical_agent/protocol/: schemas.py
scripts/: __init__.py  draw_circle.py
skills/code/: SKILL.md
test/: __init__.py  draw_square.py
tests/: test_code_skill.py  test_draw_circle.py  test_draw_square.py  test_gui_server.py  test_hardware_onboarding.py  test_openai_compatible.py
